openshift/fusionauth-search.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: authorization
  name: fusionauth-search
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: fusionauth-search
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fusionauth-search
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms1024m -Xmx1024m
        - name: MAX_LOCKED_MEMORY
          value: unlimited
        - name: cluster.name
          value: fusionauth
        image: docker.elastic.co/elasticsearch/elasticsearch:6.3.1
        imagePullPolicy: IfNotPresent
        name: search
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: es-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: es-data
        persistentVolumeClaim:
          claimName: fusionauth-es-data
