openshift/fusionauth-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authorization
  name: fusionauth-db
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: fusionauth-db
  type: LoadBalancer
