openshift/fusionauth-search-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusionauth-search-discovery
spec:
  clusterIP: None
  ports:
  - name: transport
    port: 9300
    protocol: TCP
    targetPort: 9300
  selector:
    app: fusionauth-search
  sessionAffinity: None
  type: ClusterIP
