openshift/fusionauth-search-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authorization
  name: fusionauth-search
spec:
  ports:
  - name: http
    port: 9200
    targetPort: 9200
    protocol: TCP
  selector:
    app: fusionauth-search
  type: ClusterIP
