openshift/fusionauth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authorization
  name: fusionauth
spec:
  ports:
  - name: http
    port: 9011
    targetPort: 9011
    protocol: TCP
  selector:
    app: fusionauth
  type: ClusterIP
